force-app/main/default/objects/Account/fields/Average_Resolution_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Resolution_Time_Days__c</fullName>
    <description>Average of Resolution_Time_Days__c across this Account&apos;s closed Cases. Cases with no resolution time (open, or ClosedDate before CreatedDate) are excluded from the average but still counted in Closed_Case_Count__c. Do not edit manually.</description>
    <inlineHelpText>Average calendar days to close a Case for this Account. Blank if no closed Case has a valid resolution time.</inlineHelpText>
    <label>Average Resolution Time (Days)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>