force-app/main/default/objects/Account/fields/Case_Metrics_Last_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Case_Metrics_Last_Calculated__c</fullName>
    <description>Timestamp of the last successful recalculation of Closed_Case_Count__c and Average_Resolution_Time_Days__c. Blank means the rollup has never run for this Account.</description>
    <inlineHelpText>When the case metrics on this Account were last recalculated.</inlineHelpText>
    <label>Case Metrics Last Calculated</label>
    <type>DateTime</type>
</CustomField>