force-app/main/default/objects/Account/fields/Closed_Case_Count__c.field-meta.xml
<CustomField>
    <fullName>Closed_Case_Count__c</fullName>
    <description>Total number of closed Cases ever related to this Account. Recalculated asynchronously by AccountCaseRollupQueueable. Do not edit manually.</description>
    <inlineHelpText>How many of this Account&apos;s Cases have been closed, all time.</inlineHelpText>
    <label>Closed Case Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>